# otacon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  __init__.py  __main__.py  cli.py  html_report.py  interactive.py  models.py  permutations.py  pyproject.toml  reporters.py  requirements-dev.txt  requirements.txt  resolver.py  scoring.py  state.py  theme.py  watch.py  whois.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: DESIGN.md  demo.cast
docs/superpowers/plans/: 2026-06-04-interactive-mode.md  2026-06-04-results-ux-overhaul.md
docs/superpowers/specs/: 2026-06-04-interactive-mode-design.md  2026-06-04-results-ux-overhaul-design.md
src/otacon/: _asyncutils.py  _validate.py  cli.py  html_report.py  interactive.py  models.py  permutations.py  reporters.py  resolver.py  scoring.py  state.py  theme.py  watch.py  whois.py
tests/: test_cli.py  test_html_report.py  test_interactive.py  test_permutations.py  test_reporters.py  test_resolver.py  test_scoring.py  test_state.py  test_watch.py  test_whois.py
