[project]
name = "otacon"
version = "1.0.1"
description = "Domain impersonation detector — typosquatting, homoglyph & combosquat detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gabriel" }]
keywords = [
    "security", "typosquatting", "osint", "phishing",
    "domain-monitoring", "pentest", "blue-team", "threat-intelligence",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Internet :: Name Service (DNS)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "aiodns>=3.1.0",
    "pydantic>=2.6.0",
    "questionary>=2.0.0",
    "prompt_toolkit>=3.0.0",
    "asyncwhois>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "ruff>=0.3.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
    "types-setuptools",
    "build>=1.0.0",
]

[project.scripts]
otacon = "otacon.cli:app"

[project.urls]
Homepage = "https://github.com/notimeftnoir/otacon"
Repository = "https://github.com/notimeftnoir/otacon"
Issues = "https://github.com/notimeftnoir/otacon/issues"
Changelog = "https://github.com/notimeftnoir/otacon/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
otacon = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
